--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.5",
+    "classnames": "^2.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "ethers": "^5.7.2",
