--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
     "@moralisweb3/next": "^2.12.0",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
@@ -28,6 +29,7 @@
     "next-auth": "^4.18.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.6",
     "typescript": "4.9.4",
     "wagmi": "^0.11.0"
   },
