refactor: add collection smart contract address and header position changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "spellright.documentTypes": [
-        "latex",
-        "plaintext"
+        "latex"
     ],
     "spellright.language": [
         "es"
