--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ NEXTAUTH_URL = 'http://localhost:3000'
 
 # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 NEXTAUTH_SECRET = ''
+
+# Contract Address for NFT Collection (Goerli)
+COLLECTION_ADDRESS = '0x...'
