--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "ethers": "^5.7.2",
+    "framer-motion": "^8.5.5",
     "moralis": "^2.12.0",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "recoil": "^0.7.6",
     "typescript": "4.9.4",
     "wagmi": "^0.11.0"
