--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.5",
+    "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
