--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
     "@moralisweb3/next": "^2.12.0",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
