--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moralis": "^2.12.0",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
+    "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.4",
     "wagmi": "^0.11.0"
