refactor: ignore nft images

--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,8 @@ dist
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
-# public
+# ignore the img foler in public folder
+!public/img
 
 # vuepress build output
 .vuepress/dist
