--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.4",
+    "usehooks-ts": "^2.9.1",
     "wagmi": "^0.11.0"
   },
   "devDependencies": {
