--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
     "react-hook-form": "^7.43.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "typescript": "4.9.4",
